--- a/data.html
+++ b/data.html
@@ -18,11 +18,11 @@
         <a href="placeholder.html">Modality</a>
         <a href="placeholder.html">Professionalization</a>
     </nav>
-<div class="mainBody_Research" style="margin-left: 150px;">
+<div class="mainBody_Research" style="margin-left: 175px;">
     <h1> How to organize and analyze research data</h1>
 
     <!-- SideBar-->
-    <div class="sidebar-data1">
+    <div class="sidebar">
         <p> <strong>For this lesson, you'll need the following:</strong></p>
         <ul> 
             <li> <strong> Microsoft Excel</strong></li>
@@ -82,7 +82,7 @@
     <p> Replace categorical data values with "0" or "1" (0=no, 1=yes) to indicate whether or not the value is represented for the given subject/item. This makes the categorical values <strong>dichotomous</strong>, which gives the researcher maximum flexibility in testing for relationships or correlations.    </p>
 
         <!-- SideBar-->
-        <div class="sidebar-data2">
+        <div class="sidebar">
             <p><strong>Dichotomous variables allow for the easy isolation of characteristics for analysis. For example, separating experience levels allows the researcher to test in PASW whether subjects with low experience have perceived ease of use scores significantly different from those with medium and high experience levels.</strong></p>
         </div>
 
@@ -103,7 +103,7 @@
     <h2> Run Descriptive Statistics</h2>
 
     <!-- SideBar-->
-    <div class="sidebar-data3">
+    <div class="sidebar">
         <p><strong> Analyzing descriptive statistics may lead you to ask new questions. For example, perc_enjoy is much higher on average than perc_usefulness, which also has a large variance. This suggests that a segment of users may not have considered the system useful even though they enjoyed using it.</strong></p>
     </div>
 
@@ -155,7 +155,7 @@
     <p> Use your prior knowledge or the <a href="http://www.ats.ucla.edu/stat/mult_pkg/whatstat/default.htm">Choosing the Correct Statistic</a>  resource to determine which statistic to run to find whether there is a significant difference in perc_usefulness between free_play and other tutorial types.</p>
 
     <!-- SideBar-->
-    <div class="sidebar-data4">
+    <div class="sidebar">
         <p><strong> Consult <a href="http://www.ats.ucla.edu/stat/mult_pkg/whatstat/default.htm">UCLA's Choosing the Correct Statistic</a> to ensure the statistical anlaysis is appropriate for your research question(s), variables of interest, and associated data types.</strong></p>
     </div>
 
