--- a/homepage.html
+++ b/homepage.html
@@ -21,23 +21,20 @@
       
     <h1> The Research ToolBox</h1>
 
-    <p id="homePage_p1"> Constructing a research paper is an integral part of being a graduate 
+    <p> Constructing a research paper is an integral part of being a graduate 
         student in the Information Architecture, Technical Communication and 
-        Information Design, and Technical Communication programs at IIT.
-    </p>
+        Information Design, and Technical Communication programs at IIT.</p>
 
-    <p id="homePage_p2"> There is no right or wrong way to put a paper together, but there are 
+    <p> There is no right or wrong way to put a paper together, but there are 
         a wealth of tools available to make the process efficient and manageable. 
         In this course, you will find an explanation of the basic steps involved in 
         writing a research paper, as well as a selection of tools that complement 
-        certain steps. 
-    </p>
+        certain steps. </p>
 
-    <p id="homePage_p3"> If you are new to writing research papers, this course will guide you through 
+    <p> If you are new to writing research papers, this course will guide you through 
         each of the basic steps; even if you are an experienced writer, you can still
          refresh your knowledge with one or more lessons. To begin, choose a lesson by 
-         clicking one of the modules below.
-    </p>
+         clicking one of the modules below. </p>
     
 </body>
 </html>
