--- a/research.html
+++ b/research.html
@@ -18,7 +18,7 @@
         <a href="placeholder.html">Modality</a>
         <a href="placeholder.html">Professionalization</a>
     </nav>
-<div class="mainBody_Research" style="margin-left: 150px;">
+<div class="mainBody_Research" style="margin-left: 175px;">
     <h1>Realistic Research: University, Web-based, and Local Resources</h1>
 
     <p> This lesson is meant for students who must begin research in their first semester of the TCID, IA, or the Ph.D. in Technical Communication program who want to develop, improve, or refresh their research skills. Additionally, this lesson is designed to give students strategies which will help them research more efficiently.</p>
@@ -99,7 +99,7 @@
     </ul>
 
     <!-- SideBar-->
-    <div class="sidebar-Beaing_Realisitc"><h2>Being Realistic</h2>
+    <div class="sidebar"><h2>Being Realistic</h2>
         <p> <strong> Don't assume that you can read an entire scholarly book in one day. You're only fooling yourself and wasting your precious time if you try to obtain resources that you can't possibly hope to read within your research timeline.</strong></p>
     </div>
         
@@ -148,7 +148,7 @@
     <p> When searching for a book, it is best to begin by searching the IIT library system. If you are unsuccessful in finding the title you are looking for, next try to locate the book in <strong>I-Share</strong>. If I-Share yields no results, the next step is to search for your book in <strong>WorldCat</strong>.</p>
 
     <!-- SideBar-->
-    <div class="sidebar-Beaing_Realisitc2"><h2>Being Realistic</h2>
+    <div class="sidebar"><h2>Being Realistic</h2>
         <p> <strong>When collecting resources, don't assume that you will remember any of the titles you look up or that you will be able to find them again using past searches. Keep a list of resources on Google Documents or on your flash drive. </strong></p>
     </div>
 
@@ -176,7 +176,7 @@
     <p> If you plan on visiting an I-Share library to obtain your resource, consider the following:    </p>
 
     <!-- SideBar-->
-    <div class="sidebar-Beaing_Realisitc3"><h2>Being Realistic</h2>
+    <div class="sidebar"><h2>Being Realistic</h2>
         <p> <strong>Don't waste your research time by making the trip to a library only to find out it is closed for break or you are not allowed to browse the stacks as a non-student. When in doubt, call first.</strong></p>
     </div>
 
@@ -237,7 +237,7 @@
     </ul>
 
     <!-- SideBar-->
-    <div class="sidebar-Beaing_Realisitc4"><h2>Being Realistic</h2>
+    <div class="sidebar"><h2>Being Realistic</h2>
         <p> <strong>If you're stuck when researching a topic in Technical Communication, try searching for a special issue, yearbook, or edited volume on your topic. Collections such as these offer you a wealth of resources and represent a snapshot of collective scholarship on a topic, which can help you determine how your own topic relates to that research.</strong></p>
     </div>
 
